--- a/CarRecorder/bin/AndroidManifest.xml
+++ b/CarRecorder/bin/AndroidManifest.xml
@@ -15,11 +15,13 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
+        android:name="com.forrest.carrecorder.CarRecorderApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/car_recorder"
         android:label="@string/app_name" >
         <activity
             android:name=".MainActivity"
+            android:launchMode="singleInstance"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
             <intent-filter>
