--- a/CarRecorder/bin/AndroidManifest.xml
+++ b/CarRecorder/bin/AndroidManifest.xml
@@ -21,12 +21,20 @@
         android:label="@string/app_name" >
         <activity
             android:name=".MainActivity"
-            android:launchMode="singleInstance"
             android:label="@string/app_name"
+            android:launchMode="singleInstance"
             android:screenOrientation="landscape" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".SettingActivity"
+            android:configChanges="orientation|screenSize"
+            android:screenOrientation="landscape" >
+            <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
